Update outermost loop

--- a/code/data-collection_schools-collection.ipynb
+++ b/code/data-collection_schools-collection.ipynb
@@ -74,25 +74,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#curr_idx = curr_idx + t_ix + 1\n",
     "#for t_ix, t_url in enumerate(all_topics_list[curr_idx:curr_idx+40]):\n",
     "for t_ix, t_url in enumerate(all_topics_list):\n",
     "    topic_url = t_url['href']\n",
-    "\n",
     "    topic_url_i = base_url+topic_url\n",
+    "    print(t_url)\n",
     "    page_i = requests.get(topic_url_i)\n",
     "    soup_i = BeautifulSoup(page_i.content, 'html.parser')\n",
-    "    topic_name_i = soup_i.find_all('div',{'class':'pageHeader'})[0].text.replace('\\n','')\n",
-    "    n_results_topic_i = int(soup_i.find('div',{'class':'resultCount'}).text.split('count: '\n",
-    "                                            )[1].replace(' ','').replace(',','').split('\\r')[0])\n",
-    "    n_pages_topic_i = int(soup_i.find('span',{'class':'lastPageNum'}).text.replace(' ','').replace('/',''))\n",
+    "    #topic_name_i = soup_i.find_all('div',{'class':'pageHeader'})[0].text.replace('\\n','')\n",
+    "    topic_name_i = t_url.text.split(' ')[0].capitalize()\n",
+    "    #print(topic_name_i)\n",
+    "    n_results_topic_i = int(soup_i.find('div',{'class':'count svelte-zzk411'}).text.split(' ')[0].replace(',', ''))\n",
+    "    #print(n_results_topic_i)\n",
+    "    n_pages_topic_i = int(soup_i.find('form',{'class':'svelte-10ysaoc'}).text.strip().split(' ')[-1])\n",
+    "    #print(n_pages_topic_i)\n",
     "    print(dt.datetime.now(),'\\tStarting',topic_name_i)\n",
     "    out_topic_dict = {}\n",
     "\n",
