--- a/code/data-collection_schools-collection.ipynb
+++ b/code/data-collection_schools-collection.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -82,9 +82,10 @@
      "output_type": "stream",
      "text": [
       "<a class=\"svelte-5bilvy\" href=\"/en/cbes/stories?TopicID=5098227\"><span class=\"svelte-5bilvy\">agriculture (~2,659)</span> </a>\n",
-      "2023-10-19 20:26:11.629091 \tStarting Agriculture\n",
-      "\t Agriculture page: 001/136 ... 20 results on this page 2023-10-19 20:26:12.411348\n",
-      "['The Schools’ Collection', ' Volume 0002', 'Page\\xa0069']\n"
+      "2023-10-19 20:28:32.860893 \tStarting Agriculture\n",
+      "\t Agriculture page: 001/136 ... 20 results on this page 2023-10-19 20:28:33.629494\n",
+      "['The Schools’ Collection', ' Volume 0002', 'Page\\xa0069']\n",
+      "Eoghanacht (roll number 12342)\n"
      ]
     },
     {
@@ -94,7 +95,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[25], line 58\u001B[0m\n\u001B[1;32m     55\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;130;01m\\t\u001B[39;00m\u001B[38;5;124mbroken link:\u001B[39m\u001B[38;5;124m\"\u001B[39m,topic_url_pp)\n\u001B[1;32m     56\u001B[0m     \u001B[38;5;28;01mcontinue\u001B[39;00m\n\u001B[0;32m---> 58\u001B[0m school_info_i \u001B[38;5;241m=\u001B[39m \u001B[43msoup_i\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfind_all\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdiv\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mclass\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mxml\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241m.\u001B[39mtext\n\u001B[1;32m     59\u001B[0m page_info_i \u001B[38;5;241m=\u001B[39m soup_i\u001B[38;5;241m.\u001B[39mfind_all(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdiv\u001B[39m\u001B[38;5;124m'\u001B[39m,{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mclass\u001B[39m\u001B[38;5;124m'\u001B[39m:\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mxml\u001B[39m\u001B[38;5;124m'\u001B[39m})[\u001B[38;5;241m1\u001B[39m]\u001B[38;5;241m.\u001B[39mtext\n\u001B[1;32m     60\u001B[0m title_i \u001B[38;5;241m=\u001B[39m soup_i\u001B[38;5;241m.\u001B[39mfind_all(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdiv\u001B[39m\u001B[38;5;124m'\u001B[39m,{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mclass\u001B[39m\u001B[38;5;124m'\u001B[39m:\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mxml\u001B[39m\u001B[38;5;124m'\u001B[39m}\n\u001B[1;32m     61\u001B[0m                          )[\u001B[38;5;241m2\u001B[39m]\u001B[38;5;241m.\u001B[39mtext\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m“\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m”\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "Cell \u001B[0;32mIn[27], line 60\u001B[0m\n\u001B[1;32m     58\u001B[0m school_info_i \u001B[38;5;241m=\u001B[39m soup_i\u001B[38;5;241m.\u001B[39mfind_all(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mspan\u001B[39m\u001B[38;5;124m'\u001B[39m,{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mclass\u001B[39m\u001B[38;5;124m'\u001B[39m:\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mschool-name svelte-1v5j9z0\u001B[39m\u001B[38;5;124m'\u001B[39m})[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mtext\n\u001B[1;32m     59\u001B[0m \u001B[38;5;28mprint\u001B[39m(school_info_i)\n\u001B[0;32m---> 60\u001B[0m page_info_i \u001B[38;5;241m=\u001B[39m \u001B[43msoup_i\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfind_all\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdiv\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mclass\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mxml\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241m.\u001B[39mtext\n\u001B[1;32m     61\u001B[0m title_i \u001B[38;5;241m=\u001B[39m soup_i\u001B[38;5;241m.\u001B[39mfind_all(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdiv\u001B[39m\u001B[38;5;124m'\u001B[39m,{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mclass\u001B[39m\u001B[38;5;124m'\u001B[39m:\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mxml\u001B[39m\u001B[38;5;124m'\u001B[39m}\n\u001B[1;32m     62\u001B[0m                          )[\u001B[38;5;241m2\u001B[39m]\u001B[38;5;241m.\u001B[39mtext\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m“\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m”\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     63\u001B[0m label_id \u001B[38;5;241m=\u001B[39m sub_story_url\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mhttps://www.duchas.ie/en/cbes/\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
       "\u001B[0;31mIndexError\u001B[0m: list index out of range"
      ]
     }
@@ -151,13 +152,14 @@
     "                # bibl1 = soup_i.find_all('div',{'id':'itemBibli'})[0].find('h2').text\n",
     "                # bibl2 = soup_i.find_all('div',{'id':'itemBibli'})[0].find('p').text\n",
     "                bibl = soup_i.find('p', {'class':'ref svelte-7zi47s'}).text.replace('\\n', '').replace('\\t', '').split(',')\n",
-    "                print(bibl)\n",
+    "                #print(bibl)\n",
     "\n",
     "            except:\n",
     "                print(\"\\t\\tbroken link:\",topic_url_pp)\n",
     "                continue\n",
     "\n",
-    "            school_info_i = soup_i.find_all('div',{'class':'xml'})[0].text\n",
+    "            school_info_i = soup_i.find_all('span',{'class':'school-name svelte-1v5j9z0'})[0].text\n",
+    "            #print(school_info_i)\n",
     "            page_info_i = soup_i.find_all('div',{'class':'xml'})[1].text\n",
     "            title_i = soup_i.find_all('div',{'class':'xml'}\n",
     "                                     )[2].text.replace('“','').replace('”','')\n",
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": []
