Finish updating webscraping

--- a/code/data-collection_schools-collection.ipynb
+++ b/code/data-collection_schools-collection.ipynb
@@ -74,39 +74,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<a class=\"svelte-5bilvy\" href=\"/en/cbes/stories?TopicID=5098227\"><span class=\"svelte-5bilvy\">agriculture (~2,659)</span> </a>\n",
-      "2023-10-19 20:28:32.860893 \tStarting Agriculture\n",
-      "\t Agriculture page: 001/136 ... 20 results on this page 2023-10-19 20:28:33.629494\n",
-      "['The Schools’ Collection', ' Volume 0002', 'Page\\xa0069']\n",
-      "Eoghanacht (roll number 12342)\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[27], line 60\u001B[0m\n\u001B[1;32m     58\u001B[0m school_info_i \u001B[38;5;241m=\u001B[39m soup_i\u001B[38;5;241m.\u001B[39mfind_all(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mspan\u001B[39m\u001B[38;5;124m'\u001B[39m,{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mclass\u001B[39m\u001B[38;5;124m'\u001B[39m:\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mschool-name svelte-1v5j9z0\u001B[39m\u001B[38;5;124m'\u001B[39m})[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mtext\n\u001B[1;32m     59\u001B[0m \u001B[38;5;28mprint\u001B[39m(school_info_i)\n\u001B[0;32m---> 60\u001B[0m page_info_i \u001B[38;5;241m=\u001B[39m \u001B[43msoup_i\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfind_all\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mdiv\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m{\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mclass\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m:\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mxml\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m}\u001B[49m\u001B[43m)\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m\u001B[38;5;241m.\u001B[39mtext\n\u001B[1;32m     61\u001B[0m title_i \u001B[38;5;241m=\u001B[39m soup_i\u001B[38;5;241m.\u001B[39mfind_all(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdiv\u001B[39m\u001B[38;5;124m'\u001B[39m,{\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mclass\u001B[39m\u001B[38;5;124m'\u001B[39m:\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mxml\u001B[39m\u001B[38;5;124m'\u001B[39m}\n\u001B[1;32m     62\u001B[0m                          )[\u001B[38;5;241m2\u001B[39m]\u001B[38;5;241m.\u001B[39mtext\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m“\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m”\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m     63\u001B[0m label_id \u001B[38;5;241m=\u001B[39m sub_story_url\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mhttps://www.duchas.ie/en/cbes/\u001B[39m\u001B[38;5;124m'\u001B[39m,\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[0;31mIndexError\u001B[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#curr_idx = curr_idx + t_ix + 1\n",
     "#for t_ix, t_url in enumerate(all_topics_list[curr_idx:curr_idx+40]):\n",
     "for t_ix, t_url in enumerate(all_topics_list):\n",
     "    topic_url = t_url['href']\n",
     "    topic_url_i = base_url+topic_url\n",
-    "    print(t_url)\n",
+    "    #print(t_url)\n",
     "    page_i = requests.get(topic_url_i)\n",
     "    soup_i = BeautifulSoup(page_i.content, 'html.parser')\n",
     "    #topic_name_i = soup_i.find_all('div',{'class':'pageHeader'})[0].text.replace('\\n','')\n",
@@ -160,9 +137,13 @@
     "\n",
     "            school_info_i = soup_i.find_all('span',{'class':'school-name svelte-1v5j9z0'})[0].text\n",
     "            #print(school_info_i)\n",
-    "            page_info_i = soup_i.find_all('div',{'class':'xml'})[1].text\n",
-    "            title_i = soup_i.find_all('div',{'class':'xml'}\n",
-    "                                     )[2].text.replace('“','').replace('”','')\n",
+    "            #print(sub_story_i)\n",
+    "            #page_info_i = soup_i.find_all('div',{'class':'xml'})[1].text\n",
+    "\n",
+    "            #title_i = soup_i.find_all('div',{'class':'xml'}\n",
+    "                                     #)[2].text.replace('“','').replace('”','')\n",
+    "            title_i = sub_story_i.find('h3', {'class':'svelte-1735blr'}).text\n",
+    "            #print(title_i)\n",
     "            label_id = sub_story_url.replace('https://www.duchas.ie/en/cbes/','')\n",
     "            out_topic_dict[label_id] = {'title':title_i,\n",
     "                                        'bib':[bibl[0].strip(),bibl[1].strip(),bibl[2].strip()],\n",
@@ -172,10 +153,10 @@
     "                                        'metadata':meta_data_list\n",
     "                                         }\n",
     "\n",
-    "    if not os.path.exists('/data/out/'):\n",
-    "        os.mkdir('/data/out/')\n",
+    "    if not os.path.exists('../data/out/'):\n",
+    "        os.mkdir('../data/out/')\n",
     "\n",
-    "    with open('/data/out/schools-collection_%s.json'%topic_name_i, 'w') as fp:\n",
+    "    with open('../data/out/schools-collection_%s.json'%topic_name_i, 'w') as fp:\n",
     "        json.dump(out_topic_dict, fp)\n",
     "\n",
     "    print(dt.datetime.now(),'\\tSaving....',topic_name_i,t_ix,'\\n')\n",
@@ -185,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
